# MakroLyzer

./: .gitignore  README.md  pyproject.toml  tmp.txt
docs/source/: 01_Installation.rst  02_Usage.rst  conf.py  index.rst
img/: PolyLyzer(1)(3)(3).drawio  PolyLyzer(1)(3).drawio  PolyLyzer(1).drawio  PolyLyzer.drawio  hbond_pymol.pse  pymolBox.py  pymolBox2.py
polymer_analysis/: README.md  data.xyz  dihedrals.csv  endToEndDistances.csv  n66_saturated.xyz  pre-commit-config.yaml  pyproject.toml  repeating_units.csv  satlmp.xyz  saturatedPolymers_frame_0.xyz  saturatedPolymers_frame_1.xyz  subgraphCoordinates_frame_0.xyz  subgraphCoordinates_frame_1.xyz  test.lmp
polymer_analysis/example_polymers/N66/: pattern.txt
polymer_analysis/example_polymers/N66/unsatturated/: n66-2.xyz  n66-calc.xyz  n66-test.xyz  n66.xyz  np_builder.xyz  np_builder3.xyz  pattern.txt
polymer_analysis/example_polymers/PE/: pattern.txt
polymer_analysis/example_polymers/PP/: pattern.txt
polymer_analysis/example_polymers/PS/: pattern.txt
polymer_analysis/src/MakroLyzer/: MakroLyzer.py  dictionaries.py
polymer_analysis/src/MakroLyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
polymer_analysis/src/MakroLyzer/input_handling/: checkInput.py  estimateFrames.py  inputHandlingMain.py  readInput.py  readLMP.py  readXYZ.py
polymer_analysis/src/MakroLyzer/output_handling/: outputHandlingMain.py
polymer_analysis/src/MakroLyzer/structure_modules/: anisotropy.py  asphericityParameter.py  countSubgraphs.py  dihedrals.py  endToEndDistance.py  graphs.py  hbonds.py  orderParameter.py  radiusOfGyration.py  readPatterns.py  structureMain.py  subgraphCoords.py
polymer_analysis/src/PolyLyzer/: PolyLyzer.py  dictionaries.py
polymer_analysis/src/PolyLyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
polymer_analysis/src/PolyLyzer/input_handling/: checkInput.py  estimateFrames.py  inputHandlingMain.py  readInput.py  readLMP.py
polymer_analysis/src/PolyLyzer/math/: Box.py
polymer_analysis/src/PolyLyzer/output_handling/: outputHandlingMain.py
polymer_analysis/src/PolyLyzer/structure_modules/: anisotropy.py  asphericityParameter.py  countSubgraphs.py  dihedrals.py  endToEndDistance.py  graphs.py  hbonds.py  orderParameter.py  radiusOfGyration.py  structureMain.py  subgraphCoords.py
polymer_analysis/test/: test_graphFunctions.py
polymer_analysis/test_structures/: 01.xyz  02.xyz  03.xyz  04.xyz  05.xyz  05cis.xyz  05cis2.xyz  05trans.xyz  06.xyz  07.xyz  08.xyz  09.xyz  10.xyz  10b.xyz  11.xyz  12.xyz  13.xyz  14.xyz  15.xyz  16.xyz  17.xyz  18.xyz  19.xyz  20.xyz  21.xyz  22.xyz  23.xyz  24.xyz  25.xyz  26.xyz  27.xyz  28.xyz  29.xyz  30.xyz
