# Das ist nur Deko

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "MakroLyzer"
version = "0.1.0"
requires-python = ">=3.8"

authors = [
    { name = "Katrin Drysch", email = "drysch@thch.uni-bonn.de" }
]

dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "networkx",
    "tqdm",
    "IPython"
]

[project.scripts]
MakroLyzer = "MakroLyzer.MakroLyzer:main"

[project.optional-dependencies]
test = [
    "pytest"
]

[tool.flit.metadata]
description-file = false
